--- a/adyen-appexchange/force-app/main/default/lwc/adyenCheckout/adyenCheckout.html
+++ b/adyen-appexchange/force-app/main/default/lwc/adyenCheckout/adyenCheckout.html
@@ -3,7 +3,7 @@
  -->
 
 <!-- Adyen Checkout -->
-<template>
+<template lwc:render-mode="light">
     <template if:true={loading}>
         <lightning-spinner alternative-text="Loading" size="medium"></lightning-spinner>
     </template>
