--- a/adyen-appexchange/force-app/main/default/lwc/adyenCheckout/adyenCheckout.html
+++ b/adyen-appexchange/force-app/main/default/lwc/adyenCheckout/adyenCheckout.html
@@ -4,11 +4,13 @@
 
 <!-- Adyen Checkout -->
 <template lwc:render-mode="light">
-    <template if:true={loading}>
+    <template lwc:if={loading}>
         <lightning-spinner alternative-text="Loading" size="medium"></lightning-spinner>
     </template>
-    <div id="dropin-container" style="width: 600px;"></div>
-    <template if:true={error}>
+    <template lwc:if={error}>
         <c-error-panel errors={error}></c-error-panel>
+    </template>
+    <template lwc:else>
+        <div id="dropin-container" style="width: 600px;"></div>
     </template>
 </template>
